--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <style>
     body { background: #111; }
     canvas {
-      background: #76aaf8; /* Sky blue */
+      background: #76aaf8;
       display: block; margin: 24px auto;
       border: 2px solid #252525;
       box-shadow: 0 3px 25px #222;
